Issue #110: load properties from build.properties; optionally build for JDK 1.8 or JDK 11.